--- a/Ch02/2_2_operator.html
+++ b/Ch02/2_2_operator.html
@@ -46,7 +46,7 @@
 
     <h4>비교연산자</h4>
     <script>
-        int n1 = 1, n2 = 2, n3 = 3, n4 = 4;
+        var n1 = 1, n2 = 2, n3 = 3, n4 = 4;
 
         var r1 = n1 > n2;
         var r2 = n1 < n2;
